--- a/erpnext/public/scss/point-of-sale.scss
+++ b/erpnext/public/scss/point-of-sale.scss
@@ -97,13 +97,18 @@
 			}
 
 			> .search-field {
-				grid-column: span 5 / span 5;
+				grid-column: span 6 / span 6;
 				display: flex;
 				align-items: center;
 				margin: 0px var(--margin-sm);
 			}
 
 			> .item-group-field {
+				grid-column: span 3 / span 3;
+				display: flex;
+				align-items: center;
+			}
+			> .vehicle-group-field {
 				grid-column: span 3 / span 3;
 				display: flex;
 				align-items: center;
